sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: type mismatch;
 found   : Unit
 required: Boolean
  while ((ecart>1) || (bool = true)) {
                            ^